OCPBUGS-36533-15: Removed discrete tags from 4.15 RN new features

--- a/release_notes/ocp-4-15-release-notes.adoc
+++ b/release_notes/ocp-4-15-release-notes.adoc
@@ -131,13 +131,13 @@ By default, the installation program installs control plane and compute machines
 For more information, see xref:../installing/installing_nutanix/nutanix-failure-domains.adoc#nutanix-failure-domains[Fault tolerant deployments using multiple Prism Elements].
 
 [id="ocp-4-15-installation-and-update-OCP-on-ARM"]
-
 ==== {product-title} on 64-bit ARM
 
 {product-title} {product-version} now supports the ability to enable 64k page sizes in the {op-system} kernel using the Machine Config Operator (MCO). This setting is exclusive to machines with 64-bit ARM architectures. For more information, see the xref:../post_installation_configuration/machine-configuration-tasks.adoc#machine-configuration-tasks[Machine configuration tasks] documentation.
 
 [id="ocp-4-15-installation-and-update-optional-olm"]
 ==== Optional OLM cluster capability
+
 In {product-title} 4.15, you can disable the Operator Lifecycle Manager (OLM) capability during installation. For further information, see xref:../installing/overview/cluster-capabilities.adoc#olm-overview_cluster-capabilities[Operator Lifecycle Manager capability].
 
 [id="ocp-4-15-deploying-osp-with-root-volume-etcd-on-local-disk"]
@@ -189,12 +189,13 @@ This release introduces the following updates to the *Administrator* perspective
 
 [id="node-uptime-information"]
 ===== Node uptime information
+
 With this update, you can enable the ability to view additional node uptime information to track node restarts or failures. Navigate to the *Compute* -> *Nodes* page, click *Manage columns*, and then select *Uptime*.
 
 [id="web-console-dynamic-plugin-enhancements"]
 ===== Dynamic plugin enhancements
 
-With this update, you can add a new details item to the default resource summary on the *Details* page using `console.resource/details-item`. The {product-title} release also adds example implementation for annotation, label and the delete modal to the CronTab dynamic plugin.
+With this update, you can add a new details item to the default resource summary on the *Details* page by using `console.resource/details-item`. The {product-title} release also adds example implementation for annotation, label and the delete modal to the CronTab dynamic plugin.
 
 For more information, see xref:../web_console/dynamic-plugin/dynamic-plugins-reference.adoc#dynamic-plugin-reference[Dynamic plugin reference]
 
@@ -223,6 +224,7 @@ For more information, see link:https://docs.openshift.com/pipelines/latest/about
 
 [id="ocp-4-15-red-hat-developer-hub"]
 ===== {rh-dev-hub} in the web console
+
 With this update, a quick start is now available for you to learn more about how to install and use the developer hub.
 
 For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_developer_hub/1.0[Product Documentation for {rh-dev-hub}].
@@ -239,6 +241,7 @@ For more information, see link:https://docs.openshift.com/builds/1.0/about/overv
 //
 [id="ocp-4-15-ibm-z"]
 === {ibm-z-title} and {ibm-linuxone-title}
+
 With this release, {ibm-z-name} and {ibm-linuxone-name} are now compatible with {product-title} {product-version}. You can perform the installation with z/VM, LPAR, or {op-system-base-full} Kernel-based Virtual Machine (KVM). For installation instructions, see the following documentation:
 
 * xref:../installing/installing_ibm_z/preparing-to-install-on-ibm-z.adoc#preparing-to-install-on-ibm-z[Installing a cluster with on {ibm-z-title} and {ibm-linuxone-title}]
@@ -248,7 +251,7 @@ With this release, {ibm-z-name} and {ibm-linuxone-name} are now compatible with 
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
+[id="release-notes-ibm-z-enhancements_{context}"]
 ==== {ibm-z-title} and {ibm-linuxone-title} notable enhancements
 
 The {ibm-z-name} and {ibm-linuxone-name} release on {product-title} {product-version} adds improvements and new capabilities to {product-title} components and concepts.
@@ -259,7 +262,7 @@ This release introduces support for the following features on {ibm-z-name} and {
 * {cert-manager-operator}
 * `s390x` control plane with `x86_64` multi-architecture compute nodes
 
-[discrete]
+[id="release-notes-cluster-lpar_{context}"]
 ==== Installing a cluster in an LPAR on {ibm-z-title} and {ibm-linuxone-title}
 
 {product-title} now supports user-provisioned installation of {product-title} 4.15 in a logical partition (LPAR) on {ibm-z-title} and {ibm-linuxone-title}.
@@ -283,7 +286,7 @@ For installation instructions, see the following documentation:
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
+[id="release-notes-ibm-power-notable-enhancements"]
 ==== {ibm-power-title} notable enhancements
 
 The {ibm-power-name} release on {product-title} {product-version} adds improvements and new capabilities to {product-title} components.
@@ -298,7 +301,7 @@ This release introduces support for the following features on {ibm-power-name}:
 * nx-gzip for Power10 (Hardware Acceleration)
 * The `openshift-install` utility to support various SMT levels on {ibm-power-name} (Hardware Acceleration)
 
-[discrete]
+[id="release-notes-ibm-support-matrix"]
 === {ibm-power-title}, {ibm-z-title}, and {ibm-linuxone-title} support matrix
 
 Starting in {product-title} 4.14, Extended Update Support (EUS) is extended to the {ibm-power-name} and the {ibm-z-name} platform. For more information, see the link:https://access.redhat.com/support/policy/updates/openshift-eus[OpenShift EUS Overview].
@@ -639,7 +642,6 @@ Previously, if one pod (`Pod X`) was deleted, and a second pod (`Pod Y`) was cre
 
 With this update, pods created using the macvlan CNI plugin, where the IP address management CNI plugin has assigned IPs, now send IPv6 unsolicited neighbor advertisements by default onto the network. This enhancement notifies the network fabric of the new pod's MAC address for a particular IP to refresh IPv6 neighbor caches.
 
-
 [id="ocp-4-15-configuring-whereabouts-IP-reconciler-schedule"]
 ==== Configuring the Whereabouts IP reconciler schedule
 
@@ -672,20 +674,24 @@ For more information about all-multicast mode, see xref:../networking/hardware_n
 
 [id="ocp-4-15-multi-network-policy-ipv6"]
 ==== Multi-network policy support for IPv6 networks
+
 With this update, you can now create multi-network policies for IPv6 networks. For more information, see xref:../networking/multiple_networks/configuring-multi-network-policy.adoc#nw-multi-network-policy-ipv6-support_configuring-multi-network-policy[Supporting multi-network policies in IPv6 networks].
 
 [id="ocp-4-15-ingress-dashboards"]
 ==== Ingress Operator metrics dashboard available
+
 With this release, Ingress networking metrics are now viewable from within the {product-title} web console. See xref:../networking/networking-dashboards.adoc#ingress-dashboards[Ingress Operator dashboard] for more information.
 
 [id="ocp-4-15-CoreDNS-filtration-externalname-service-queries"]
 ==== CoreDNS filtration of ExternalName service queries for subdomains
+
 As of {product-title} {product-version}, CoreDNS has been updated from 1.10.1 to 1.11.1.
 
 This update to CoreDNS resolved an issue where CoreDNS would incorrectly provide a response to a query for an `ExternalName` service that shared its name with a top-level domain, such as `com` or `org`. A query for subdomains of an external service should not resolve to that external service. See the associated link:https://github.com/coredns/coredns/pull/6162[CoreDNS GitHub issue] for more information.
 
 [id="ocp-4-15-CoreDNS-metrics-deprecation-and-removal"]
 ==== CoreDNS metrics deprecation and removal
+
 As of {product-title} {product-version}, CoreDNS has been updated from 1.10.1 to 1.11.1.
 
 This update to CoreDNS resulted in the deprecation and removal of certain metrics that have been relocated, including the metrics `coredns_forward_healthcheck_failures_total`, `coredns_forward_requests_total`, `coredns_forward_responses_total`, and `coredns_forward_request_duration_seconds`. See link:https://coredns.io/plugins/forward/#metrics[CoreDNS Metrics] for more information.
@@ -731,6 +737,7 @@ For more information, see the following sections:
 
 [id="ocp-4.15-storage-recovering-vgs-from-prev-installation"]
 ==== Recovering volume groups from the previous {lvms} installation
+
 With this release, the `LVMCluster` custom resource (CR) provides support for recovering volume groups from the previous {lvms} installation. If the `deviceClasses.name` field is set to the name of a volume group from the previous {lvms} installation, {lvms} recreates the resources related to that volume group in the current {lvms} installation. This simplifies the process of using devices from the previous {lvms} installation through the reinstallation of {lvms}.
 
 For more information, see xref:../storage/persistent_storage/persistent_storage_local/persistent-storage-using-lvms.adoc#lvms-creating-lvms-cluster_logical-volume-manager-storage[Creating a Logical Volume Manager cluster on a worker node].
@@ -772,36 +779,42 @@ With this release, {lvms} is designed for Federal Information Processing Standar
 
 [id="ocp-4-15-storage-retro-sc-assignment"]
 ==== Retroactive default StorageClass assignment is generally available
+
 Before {product-title} 4.13, if there was no default storage class, persistent volumes claims (PVCs) that were created that requested the default storage class remained stranded in the pending state indefinitely, unless you manually delete and recreate them. Starting with {product-title} 4.14, as a Technology Preview feature, the default storage class is assigned to these PVCs retroactively so that they do not remain in the pending state. After a default storage class is created, or one of the existing storage classes is declared the default, these previously stranded PVCs are assigned to the default storage class. This feature is now generally available.
 
 For more information, see xref:..//storage/container_storage_interface/persistent-storage-csi-sc-manage.adoc#absent-default-storage-class[Absent default storage class].
 
 [id="ocp-4-15-storage-lso-erase-lv-option"]
 ==== Local Storage Operator option to facilitate removing existing data on local volumes is generally available
+
 This feature provides an optional field, `forceWipeDevicesAndDestroyAllData` defining whether or not to call `wipefs`, which removes partition table signatures (magic strings) making the disk ready to use for Local Storage Operator (LSO) provisioning. No other data besides signatures is erased. This feature is now generally available. Note that this feature does not apply to `LocalVolumeSet` (LVS).
 
 For more information, see xref:..//storage/persistent_storage/persistent_storage_local/persistent-storage-local.adoc#local-volume-cr_persistent-storage-local[Provisioning local volumes by using the Local Storage Operator].
 
 [id="ocp-4-15-storage-non-graceful-node-shutdown"]
 ==== Detach CSI volumes after non-graceful node shutdown is generally available
+
 Starting with {product-title} 4.13, Container Storage Interface (CSI) drivers can automatically detach volumes when a node goes down non-gracefully as a Technology Preview feature. When a non-graceful node shutdown occurs, you can then manually add an out-of-service taint on the node to allow volumes to automatically detach from the node. This feature is now generally available.
 
 For more information, see xref:..//storage/container_storage_interface/persistent-storage-csi-vol-detach-non-graceful-shutdown.adoc[Detach CSI volumes after non-graceful node shutdown].
 
 [id="ocp-4-15-storage-gcp-filestore-shared-vpc"]
 ==== Shared VPC is supported for the GCP Filestore CSI Driver Operator as generally available
+
 Shared virtual private cloud (VPC) for the Google Compute Platform (GCP) Container Storage Interface (CSI) Driver Operator is now supported as a generally available feature. Shared VPC simplifies network management, allows consistent network policies, and provides a centralized view of network resources.
 
 For more information, see xref:..//storage/container_storage_interface/persistent-storage-csi-google-cloud-file.adoc#persistent-storage-csi-google-cloud-file-create-sc_persistent-storage-csi-google-cloud-file[Creating a storage class for GCP Filestore Storage].
 
 [id="ocp-4-15-storage-ibm-vpc-byok"]
 ==== User-Managed encryption supports IBM VPC Block storage as generally available
+
 The user-managed encryption feature allows you to provide keys during installation that encrypt {product-title} node root volumes, and enables all managed storage classes to use the specified encryption key to encrypt provisioned storage volumes. This feature was introduced in {product-title} 4.13 for Google Cloud Platform (GCP) persistent disk (PD) storage, Microsoft Azure Disk, and Amazon Web Services (AWS) Elastic Block storage (EBS), and is now supported on IBM Virtual Private Cloud (VPC) Block storage.
 
 //TODO: For more information, see xref:..//storage/container_storage_interface/persistent-storage-csi-ibm-vpc-block.adoc#byok_persistent-storage-csi-ibm-vpc-block [User-managed encryption].
 //
 [id="ocp-4-15-storage-selinux-relabling-mount-options"]
 ==== SELinux relabeling using mount options (Technology Preview)
+
 Previously, when SELinux was enabled, the persistent volume's (PV's) files were relabeled when attaching the PV to the pod, potentially causing timeouts when the PVs contained many files, as well as overloading the storage backend.
 
 In {product-title} 4.15, for Container Storage Interface (CSI) driver that support this feature, the driver will mount the volume directly with the correct SELinux labels, eliminating the need to recursively relabel the volume, and pod startup can be significantly faster.
@@ -912,6 +925,7 @@ For more information, see xref:../machine_management/control_plane_machine_manag
 
 [id="ocp-4-15-nodes"]
 === Nodes
+
 [id="ocp-4-15-nodes-dev-fuse"]
 ==== The /dev/fuse device enables faster builds on unprivileged pods
 
@@ -941,6 +955,7 @@ The in-cluster monitoring stack for this release includes the following new and 
 
 [id="ocp-4-15-monitoring-updates-to-monitoring-stack-components-and-dependencies"]
 ==== Updates to monitoring stack components and dependencies
+
 This release includes the following version updates for in-cluster monitoring stack components and dependencies:
 
 * Alertmanager to 0.26.0
@@ -963,6 +978,7 @@ Red{nbsp}Hat does not guarantee backward compatibility for recording rules or al
 
 [id="ocp-4-15-monitoring-new-metrics-server-to-access-metrics-API-technology-preview"]
 ==== New Metrics Server component to access the Metrics API (Technology Preview)
+
 This release introduces a Technology Preview option to add a Metrics Server component to the in-cluster monitoring stack.
 As a Technology Preview feature, Metrics Server is automatically installed instead of Prometheus Adapter if the `FeatureGate` custom resource is configured with the `TechPreviewNoUpgrade` option.
 If installed, Metrics Server collects resource metrics and exposes them in the `metrics.k8s.io` Metrics API service for use by other tools and APIs.
@@ -971,29 +987,34 @@ For more information, see xref:../observability/monitoring/config-map-reference-
 
 [id="ocp-4-15-monitoring-new-feature-to-send-exemplar-data-to-remote-write-storage-for-user-defined-projects"]
 ==== New feature to send exemplar data to remote write storage for user-defined projects
+
 User-defined projects can now use remote write to send exemplar data scraped by Prometheus to remote storage.
 To use this feature, configure remote write using the `sendExemplars` option in the `RemoteWriteSpec` resource.
 For more information, see xref:../observability/monitoring/config-map-reference-for-the-cluster-monitoring-operator.adoc#remotewritespec[RemoteWriteSpec] in the config map API reference for the {cmo-full}.
 
 [id="ocp-4-15-monitoring-improved-alert-querying-for-user-defined-projects"]
 ==== Improved alert querying for user-defined projects
+
 Applications in user-defined projects now have API access to query alerts for application namespaces via the rules tenancy port for Thanos Querier.
 You can now construct queries that access the `/api/v1/alerts` endpoint via port 9093 for Thanos Querier, provided that the HTTP request contains a `namespace` parameter.
 In previous releases, the rules tenancy port for Thanos Querier did not provide API access to the `/api/v1/alerts` endpoint.
 
 [id="ocp-4-15-monitoring-prometheus-updated-to-tolerate-jitters-at-scrape-time"]
 ==== Prometheus updated to tolerate jitters at scrape time
+
 The default Prometheus configuration in the monitoring stack has been updated so that jitters are tolerated at scrape time.
 For monitoring deployments that have shown sub-optimal chunk compression for data storage, this update helps to optimize data compression, thereby reducing the disk space used by the time series database in these deployments.
 
 [id="ocp-4-15-monitoring-improved-staleness-handling-for-the-kubelet-service-monitor"]
 ==== Improved staleness handling for the kubelet service monitor
+
 Staleness handling for the kubelet service monitor has been improved to ensure that alerts and time aggregations are accurate.
 This improved functionality is active by default and makes the dedicated service monitors feature obsolete.
 As a result, the dedicated service monitors feature has been disabled and is now deprecated, and setting the `DedicatedServiceMonitors` resource to `enabled` has no effect.
 
 [id="ocp-4-15-monitoring-improved-ability-to-troubleshoot-reports-of-tasks-failing"]
 ==== Improved ability to troubleshoot reports of tasks failing
+
 The reasons provided when tasks fail in monitoring components are now more granular so that you can more easily pinpoint whether a reported failure originated in components deployed in the `openshift-monitoring` namespace or in the `openshift-user-workload-monitoring` namespace.
 If the {cmo-first} reports task failures, the following reasons have been added to identify where the failures originated:
 
@@ -1002,20 +1023,24 @@ If the {cmo-first} reports task failures, the following reasons have been added 
 
 [id="ocp-4-15-network-observability-1-5"]
 === Network Observability Operator
+
 The Network Observability Operator releases updates independently from the {product-title} minor version release stream. Updates are available through a single, Rolling Stream which is supported on all currently supported versions of {product-title} 4. Information regarding new features, enhancements, and bug fixes for the Network Observability Operator is found in the xref:../observability/network_observability/network-observability-operator-release-notes.adoc#network-observability-rn[Network Observability release notes].
 
 [id="ocp-4-15-scalability-and-performance"]
 === Scalability and performance
+
 You can set the control plane hardware speed to one of `"Standard"`, `"Slower"`, or the default, `""`, which allows the system to decide which speed to use. This is a Technology Preview feature. For more information, see xref:../scalability_and_performance/recommended-performance-scale-practices/recommended-etcd-practices.adoc#etcd-tuning-parameters_recommended-etcd-practices[Setting tuning parameters for etcd].
 
 [id="ocp-4-15-hub-side-templating-policygentemplate"]
 ==== Hub-side templating for PolicyGenTemplate CRs
+
 You can manage the configuration of fleets of clusters by using hub templates to populate the group and site values in the generated policies that get applied to managed clusters.
 By using hub templates in group and site `PolicyGenTemplate` (PGT) CRs you can significantly reduce the number of policies on the hub cluster.
 For more information, see xref:../edge_computing/ztp-advanced-policy-config.adoc#ztp-specifying-nics-in-pgt-crs-with-hub-cluster-templates_ztp-advanced-policy-config[Specifying group and site configuration in group PolicyGenTemplate CRs with hub templates].
 
 [id="ocp-4-15-nto-latency-testing"]
 ==== Node Tuning Operator (NTO)
+
 The Cloud-native Network Functions (CNF) tests image for latency tests, `cnf-tests`, has been simplified.
 The new image has three tests for latency measurements.
 The tests run by default and require a performance profile configured on the cluster.
@@ -1036,6 +1061,7 @@ For more information, see xref:../scalability_and_performance/low_latency_tuning
 
 [id="ocp-4-15-bare-metal-operator"]
 ==== Bare Metal Operator
+
 For {product-title} {product-version}, when the Bare Metal Operator removes a host from the cluster it also powers off the host. This enhancement streamlines hardware maintenance and management.
 
 [id="ocp-4-15-hcp"]
